--- a/gui/pages/slave.html
+++ b/gui/pages/slave.html
@@ -24,7 +24,7 @@
     </div>
     <table class="table">
         <tr ng-repeat="mongod in mongods">
-            <td>Mongod at <code>{{slave.hostname}}:{{mongod.slave_port}}</code> on Replica Set <a
+            <td>Mongod (<b>{{mongod.observed_execution_state}}</b>) at <code>{{slave.hostname}}:{{mongod.slave_port}}</code> on Replica Set <a
                     href="/#/replicasets/{{mongod.replica_set_id}}"><code>{{mongod.replicaset.name}}</code></a></td>
         </tr>
     </table>
