FIX: gui: some efficiency issues with the pie chart

--- a/gui/pages/home.html
+++ b/gui/pages/home.html
@@ -18,8 +18,8 @@
 </div>
 <a href="/#/problems" class="btn btn-default pull-right" ng-if="problems.length > 3">{{ problems.length - 3 }} more
     Problems <span aria-hidden="true">&rarr;</span></a>
-<br ng-if="problems.length > 0"/>
-<div ng-if="slaves.length > 0">
+<br/>
+<div>
 <h2 class="sub-header">Slave Health</h2>
 <div id="slaves"></div>
 </div>
