--- a/gui/index.html
+++ b/gui/index.html
@@ -47,7 +47,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="/"><span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span>
+                <li class="active"><a href="/#/"><span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span>
                     Dashboard</a>
                 </li>
                 <li><a href="/help"><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span> Help</a>
