--- a/gui/pages/system.html
+++ b/gui/pages/system.html
@@ -7,10 +7,31 @@
     <div class="panel-body">
         <p>The shared secret for the Mongods in the cluster.</p>
         <div class="row">
-            <div class="col-lg-6">
-                <form>
+            <div class="col-lg-12">
                     <input minlength="6" onClick="this.select();" maxlength="1024" ng-model="keyFile.content" required type="text" readonly style="width: 100%" class="form-control">
-                </form>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h3 class="panel-title">Mongod administrative account</h3>
+    </div>
+    <div class="panel-body">
+        <div class="row">
+            <div class="col-lg-1">
+                <label>Username</label>
+            </div>
+            <div class="col-lg-11">
+                    <input onClick="this.select();" ng-model="mgmtUser.username" required type="text" readonly style="width: 100%" class="form-control">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-1">
+                <label>Password</label>
+            </div>
+            <div class="col-lg-11">
+                <input onClick="this.select();" ng-model="mgmtUser.password" required type="text" readonly style="width: 100%" class="form-control">
             </div>
         </div>
     </div>
