--- a/gui/pages/slaves.html
+++ b/gui/pages/slaves.html
@@ -7,9 +7,9 @@
 <div ng-if="slaves.length > 0">
     <div class="panel panel-danger">
         <div class="panel-heading">
-            <h3 class="panel-title">Slaves with Problems</h3>
+            <h3 data-toggle="collapse" data-target="#slaves-problems" aria-expanded="true" class="panel-title mouse-link mamid-colape">Slaves with Problems <span class="caret"></span></h3></a>
         </div>
-        <div class="list-group">
+        <div class="list-group collapse in" id="slaves-problems">
             <a href="#/slaves/{{slave.id}}" class="list-group-item" ng-repeat="slave in slaves"
                ng-if="problemsBySlave[slave.id].length > 0">
 
@@ -26,9 +26,9 @@
 
     <div class="panel panel-info">
         <div class="panel-heading">
-            <h3 class="panel-title">Maintenance</h3>
+            <h3 data-toggle="collapse" data-target="#slaves-maintenance" aria-expanded="true" class="panel-title mouse-link mamid-colape">Maintenance <span class="caret"></span></h3>
         </div>
-        <div class="list-group">
+        <div class="list-group collapse in" id="slaves-maintenance">
             <a href="#/slaves/{{slave.id}}" class="list-group-item" ng-repeat="slave in slaves"
                ng-if="slave.configured_state == 'maintenance' && !problemsBySlave[slave.id]">
                 <td>
@@ -42,9 +42,9 @@
 
     <div class="panel panel-info">
         <div class="panel-heading">
-            <h3 class="panel-title">Disabled</h3>
+            <h3 data-toggle="collapse" data-target="#slaves-disabled" aria-expanded="true" class="panel-title mouse-link mamid-colape">Disabled <span class="caret"></span></h3>
         </div>
-        <div class="list-group">
+        <div class="list-group collapse in" id="slaves-disabled">
             <a href="#/slaves/{{slave.id}}" class="list-group-item" ng-repeat="slave in slaves"
                ng-if="slave.configured_state == 'disabled' && !problemsBySlave[slave.id]">
                 <td>
@@ -58,9 +58,9 @@
 
     <div class="panel panel-success">
         <div class="panel-heading">
-            <h3 class="panel-title">Active</h3>
+            <h3 data-toggle="collapse" data-target="#slaves-active" aria-expanded="true" class="panel-title mouse-link mamid-colape">Active <span class="caret"></span></h3>
         </div>
-        <div class="list-group">
+        <div class="list-group collapse in" id="slaves-active">
             <a href="#/slaves/{{slave.id}}" class="list-group-item" ng-repeat="slave in slaves"
                ng-if="slave.configured_state == 'active' && !problemsBySlave[slave.id]">
                 <td>
