--- a/gui/pages/slaves.html
+++ b/gui/pages/slaves.html
@@ -5,12 +5,23 @@
     <p><br/><a class="btn btn-success btn-lg" href="/#/slaves/new" role="button">Create one</a></p>
 </div>
 <div ng-if="slaves.length > 0">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="input-group">
+                <input placeholder="Filter Slaves" ng-model="search" type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+                <span class="input-group-addon"><span class="glyphicon glyphicon-search"
+                                                      aria-hidden="true"></span></span>
+            </div>
+        </div>
+    </div>
+    <br/>
     <div class="panel panel-danger">
         <div class="panel-heading">
-            <h3 data-toggle="collapse" data-target="#slaves-problems" aria-expanded="true" class="panel-title mouse-link mamid-colape">Slaves with Problems <span class="caret"></span></h3></a>
+            <h3 data-toggle="collapse" data-target="#slaves-problems" aria-expanded="true"
+                class="panel-title mouse-link mamid-colape">Slaves with Problems <span class="caret"></span></h3></a>
         </div>
         <div class="list-group collapse in" id="slaves-problems">
-            <a href="#/slaves/{{slave.id}}" class="list-group-item" ng-repeat="slave in slaves"
+            <a href="#/slaves/{{slave.id}}" class="list-group-item" ng-repeat="slave in slaves | filter:search"
                ng-if="problemsBySlave[slave.id].length > 0">
 
                 <span class="glyphicon glyphicon-hdd" aria-hidden="true" ng-if="slave.persistent_storage"></span>
@@ -26,14 +37,16 @@
 
     <div class="panel panel-info">
         <div class="panel-heading">
-            <h3 data-toggle="collapse" data-target="#slaves-maintenance" aria-expanded="true" class="panel-title mouse-link mamid-colape">Maintenance <span class="caret"></span></h3>
+            <h3 data-toggle="collapse" data-target="#slaves-maintenance" aria-expanded="true"
+                class="panel-title mouse-link mamid-colape">Maintenance <span class="caret"></span></h3>
         </div>
         <div class="list-group collapse in" id="slaves-maintenance">
-            <a href="#/slaves/{{slave.id}}" class="list-group-item" ng-repeat="slave in slaves"
+            <a href="#/slaves/{{slave.id}}" class="list-group-item" ng-repeat="slave in slaves | filter:search"
                ng-if="slave.configured_state == 'maintenance' && !problemsBySlave[slave.id]">
                 <td>
                     <span class="glyphicon glyphicon-hdd" aria-hidden="true" ng-if="slave.persistent_storage"></span>
-                    <span class="glyphicon glyphicon-transfer" aria-hidden="true" ng-if="!slave.persistent_storage"></span>
+                    <span class="glyphicon glyphicon-transfer" aria-hidden="true"
+                          ng-if="!slave.persistent_storage"></span>
                     <code>{{ slave.hostname }}</code>
                 </td>
             </a>
@@ -42,14 +55,16 @@
 
     <div class="panel panel-info">
         <div class="panel-heading">
-            <h3 data-toggle="collapse" data-target="#slaves-disabled" aria-expanded="true" class="panel-title mouse-link mamid-colape">Disabled <span class="caret"></span></h3>
+            <h3 data-toggle="collapse" data-target="#slaves-disabled" aria-expanded="true"
+                class="panel-title mouse-link mamid-colape">Disabled <span class="caret"></span></h3>
         </div>
         <div class="list-group collapse in" id="slaves-disabled">
-            <a href="#/slaves/{{slave.id}}" class="list-group-item" ng-repeat="slave in slaves"
+            <a href="#/slaves/{{slave.id}}" class="list-group-item" ng-repeat="slave in slaves | filter:search"
                ng-if="slave.configured_state == 'disabled' && !problemsBySlave[slave.id]">
                 <td>
                     <span class="glyphicon glyphicon-hdd" aria-hidden="true" ng-if="slave.persistent_storage"></span>
-                    <span class="glyphicon glyphicon-transfer" aria-hidden="true" ng-if="!slave.persistent_storage"></span>
+                    <span class="glyphicon glyphicon-transfer" aria-hidden="true"
+                          ng-if="!slave.persistent_storage"></span>
                     <code>{{ slave.hostname }}</code>
                 </td>
             </a>
@@ -58,14 +73,16 @@
 
     <div class="panel panel-success">
         <div class="panel-heading">
-            <h3 data-toggle="collapse" data-target="#slaves-active" aria-expanded="true" class="panel-title mouse-link mamid-colape">Active <span class="caret"></span></h3>
+            <h3 data-toggle="collapse" data-target="#slaves-active" aria-expanded="true"
+                class="panel-title mouse-link mamid-colape">Active <span class="caret"></span></h3>
         </div>
         <div class="list-group collapse in" id="slaves-active">
-            <a href="#/slaves/{{slave.id}}" class="list-group-item" ng-repeat="slave in slaves"
+            <a href="#/slaves/{{slave.id}}" class="list-group-item" ng-repeat="slave in slaves | filter:search"
                ng-if="slave.configured_state == 'active' && !problemsBySlave[slave.id]">
                 <td>
                     <span class="glyphicon glyphicon-hdd" aria-hidden="true" ng-if="slave.persistent_storage"></span>
-                    <span class="glyphicon glyphicon-transfer" aria-hidden="true" ng-if="!slave.persistent_storage"></span>
+                    <span class="glyphicon glyphicon-transfer" aria-hidden="true"
+                          ng-if="!slave.persistent_storage"></span>
                     <code>{{ slave.hostname }}</code>
                 </td>
             </a>
