--- a/gui/pages/replicaset.html
+++ b/gui/pages/replicaset.html
@@ -14,6 +14,18 @@
 </div>
 <div class="panel panel-default" ng-if="!is_create_view">
     <div class="panel-heading">
+        <h3 class="panel-title">Replica Set <a target="_blank" href="https://docs.mongodb.com/manual/reference/connection-string/">MongoDB URL</a></h3>
+    </div>
+    <div class="panel-body">
+        <div class="row">
+            <div class="col-lg-12">
+                <input class="form-control" type="text" readonly onClick="this.select();" value="mongodb://[username:password@]{{generateMongoCLIString()}}/[database]?replicaSet={{replicaset.name}}"/>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="panel panel-default" ng-if="!is_create_view">
+    <div class="panel-heading">
         <h3 class="panel-title">Replica Set Overview</h3>
     </div>
     <table class="table" width="100%">
@@ -94,12 +106,13 @@
                             </li>
                             <li><b>None</b>: Mongod is started without CLI flags regarding Sharding</li>
                         </ul>
-                        <div class="row" ng-if="!is_create_view && edit_replicaset.sharding_role == 'configsvr'">
+                        <div class="row" ng-if="edit_replicaset.sharding_role == 'configsvr'">
                             <div class="col-lg-2">
                                 <label>Command line to start mongos:</label>
                             </div>
                             <div class="col-lg-10">
-                                <textarea onClick="this.select();" class="form-control"style="width: 100%" readonly>mongos --configdb {{edit_replicaset.name}}/{{generateMongoCLIString()}} --clusterAuthMode keyFile --keyFile [your keyfile]</textarea>
+                                <input type="text" onClick="this.select();" class="form-control" readonly
+                                       value="mongos --configdb {{edit_replicaset.name}}/{{generateMongoCLIString()}} --clusterAuthMode keyFile --keyFile [your keyfile]"/>
                             </div>
                         </div>
                     </td>
