--- a/gui/pages/slaves.html
+++ b/gui/pages/slaves.html
@@ -18,7 +18,7 @@
     <div class="panel panel-danger">
         <div class="panel-heading">
             <h3 data-toggle="collapse" data-target="#slaves-problems" aria-expanded="true"
-                class="panel-title mouse-link mamid-colape">Slaves with Problems <span class="caret"></span></h3></a>
+                class="panel-title mouse-link mamid-collapse">Slaves with Problems <span class="caret rotatecaret"></span></h3></a>
         </div>
         <div class="list-group collapse in" id="slaves-problems">
             <a href="#/slaves/{{slave.id}}" class="list-group-item" ng-repeat="slave in slaves | filter:search"
@@ -38,7 +38,7 @@
     <div class="panel panel-info">
         <div class="panel-heading">
             <h3 data-toggle="collapse" data-target="#slaves-maintenance" aria-expanded="true"
-                class="panel-title mouse-link mamid-colape">Maintenance <span class="caret"></span></h3>
+                class="panel-title mouse-link mamid-collapse">Maintenance <span class="caret rotatecaret"></span></h3>
         </div>
         <div class="list-group collapse in" id="slaves-maintenance">
             <a href="#/slaves/{{slave.id}}" class="list-group-item" ng-repeat="slave in slaves | filter:search"
@@ -56,7 +56,7 @@
     <div class="panel panel-info">
         <div class="panel-heading">
             <h3 data-toggle="collapse" data-target="#slaves-disabled" aria-expanded="true"
-                class="panel-title mouse-link mamid-colape">Disabled <span class="caret"></span></h3>
+                class="panel-title mouse-link mamid-collapse">Disabled <span class="caret rotatecaret"></span></h3>
         </div>
         <div class="list-group collapse in" id="slaves-disabled">
             <a href="#/slaves/{{slave.id}}" class="list-group-item" ng-repeat="slave in slaves | filter:search"
@@ -74,7 +74,7 @@
     <div class="panel panel-success">
         <div class="panel-heading">
             <h3 data-toggle="collapse" data-target="#slaves-active" aria-expanded="true"
-                class="panel-title mouse-link mamid-colape">Active <span class="caret"></span></h3>
+                class="panel-title mouse-link mamid-collapse">Active <span class="caret rotatecaret"></span></h3>
         </div>
         <div class="list-group collapse in" id="slaves-active">
             <a href="#/slaves/{{slave.id}}" class="list-group-item" ng-repeat="slave in slaves | filter:search"
