--- a/gui/pages/replicaset.html
+++ b/gui/pages/replicaset.html
@@ -14,12 +14,15 @@
 </div>
 <div class="panel panel-default" ng-if="!is_create_view">
     <div class="panel-heading">
-        <h3 class="panel-title">Replica Set <a target="_blank" href="https://docs.mongodb.com/manual/reference/connection-string/">MongoDB URL</a></h3>
+        <h3 class="panel-title">Replica Set <a target="_blank"
+                                               href="https://docs.mongodb.com/manual/reference/connection-string/">MongoDB
+            URL</a></h3>
     </div>
     <div class="panel-body">
         <div class="row">
             <div class="col-lg-12">
-                <input class="form-control" type="text" readonly onClick="this.select();" value="mongodb://[username:password@]{{generateMongoCLIString()}}/[database]?replicaSet={{replicaset.name}}"/>
+                <input class="form-control" type="text" readonly onClick="this.select();"
+                       value="mongodb://[username:password@]{{generateMongoCLIString()}}/[database]?replicaSet={{replicaset.name}}"/>
             </div>
         </div>
     </div>
@@ -32,10 +35,10 @@
         <tr ng-repeat="mongo in replicaset.mongods">
             <td ng-class="{ 'bs-callout-unknown': problemsBySlave[mongo.slave.id].length > 0 }">
                 Mongod (<b>{{mongo.observed_execution_state}}</b>) on <code>{{ mongo.slave.hostname
-                    }}:{{mongo.slave_port}}</code> -
+                }}:{{mongo.slave_port}}</code> -
                 <a href="/#/slaves/{{mongo.slave.id}}"><b ng-if="!problemsBySlave[mongo.slave.id]"> Slave is in
                     {{ mongo.slave.configured_state }} mode.</b>
-                <b ng-if="problemsBySlave[mongo.slave.id].length > 0"> Slave has problems.</b></a>
+                    <b ng-if="problemsBySlave[mongo.slave.id].length > 0"> Slave has problems.</b></a>
 
             </td>
         </tr>
@@ -73,27 +76,31 @@
                     <th style="vertical-align: top; padding-top: 12px;">Sharding support
                     </th>
                     <td colspan="2">
-                        <div class="btn-group btn-group-justified" style="width: auto !important;">
-                            <div class="btn-group">
-                                <button type="button" class="btn btn-default"
-                                        ng-class="{active: edit_replicaset.sharding_role == 'configsvr'}"
-                                        ng-disabled="!is_create_view"
-                                        ng-click="setShardingRole('configsvr')">Config
-                                </button>
-                            </div>
-                            <div class="btn-group">
-                                <button type="button" class="btn btn-default"
-                                        ng-class="{active: edit_replicaset.sharding_role == 'shardsvr'}"
-                                        ng-disabled="!is_create_view"
-                                        ng-click="setShardingRole('shardsvr')">Shard
-                                </button>
-                            </div>
-                            <div class="btn-group">
-                                <button type="button" class="btn btn-default"
-                                        ng-class="{active: edit_replicaset.sharding_role == 'none'}"
-                                        ng-disabled="!is_create_view"
-                                        ng-click="setShardingRole('none')">None
-                                </button>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <div class="btn-group btn-group-justified" style="width: auto !important;">
+                                    <div class="btn-group">
+                                        <button type="button" class="btn btn-default"
+                                                ng-class="{active: edit_replicaset.sharding_role == 'configsvr'}"
+                                                ng-disabled="!is_create_view"
+                                                ng-click="setShardingRole('configsvr')">Config
+                                        </button>
+                                    </div>
+                                    <div class="btn-group">
+                                        <button type="button" class="btn btn-default"
+                                                ng-class="{active: edit_replicaset.sharding_role == 'shardsvr'}"
+                                                ng-disabled="!is_create_view"
+                                                ng-click="setShardingRole('shardsvr')">Shard
+                                        </button>
+                                    </div>
+                                    <div class="btn-group">
+                                        <button type="button" class="btn btn-default"
+                                                ng-class="{active: edit_replicaset.sharding_role == 'none'}"
+                                                ng-disabled="!is_create_view"
+                                                ng-click="setShardingRole('none')">None
+                                        </button>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <ul style="margin-top: 10px; list-style-type: none; padding-left: 0pt; line-height: 1.5em "
