FIX: GUI: oversized checkbox in chrome

--- a/gui/pages/slave.html
+++ b/gui/pages/slave.html
@@ -75,8 +75,8 @@
                         <th>Slave with persistent storage <span class="glyphicon glyphicon-hdd"
                                                                 aria-hidden="true"></span>
                         </th>
-                        <td colspan="3">
-                            <input type="checkbox" class="form-control" ng-model="edit_slave.persistent_storage"/>
+                        <td colspan="3" style="text-align: center;">
+                            <input type="checkbox" ng-model="edit_slave.persistent_storage"/>
                         </td>
                     </tr>
                 </table>
