UPD: gui/pages/slave: Explain what the Mongod port range is used for

--- a/gui/pages/slave.html
+++ b/gui/pages/slave.html
@@ -59,7 +59,7 @@
                     </tr>
                     <tr>
                         <th>Mongod port range <span data-toggle="tooltip" data-placement="right"
-                                                    title="Begin is inclusive, end is exclusive."><span
+                                                    title="Ports where Mongods can be spawned. Begin is inclusive, end is exclusive."><span
                                 class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></span></th>
                         <td>
                             <input type="number" class="form-control" placeholder="18080"
