--- a/gui/pages/system.html
+++ b/gui/pages/system.html
@@ -42,5 +42,5 @@
     </div>
 </div>
 <hr/>
-<h3 class="text-center" style="color: #858585">Powered by <span class="mamid"></span></h3>
+<h3 class="text-center" style="color: #858585">Powered by <a target="_blank" href="https://github.com/KIT-MAMID/mamid"><i>MAMID</i></a></h3>
 <img class="center-block mamid-logo" style="max-height: 200px;" src="/static/img/mamid.png" ng-click="e()"/>
