UPD: GUI: yellow for disabled slaves

--- a/gui/pages/replicaset.html
+++ b/gui/pages/replicaset.html
@@ -33,7 +33,7 @@
     </div>
     <table class="table" width="100%">
         <tr ng-repeat="mongo in replicaset.mongods">
-            <td ng-class="{ 'bs-callout-unknown': problemsBySlave[mongo.slave.id].length > 0 }">
+            <td ng-class="{ 'bs-callout-unknown': problemsBySlave[mongo.slave.id].length > 0, 'bs-callout-warning': mongo.slave.configured_state == 'disabled' && !problemsBySlave[mongo.slave.id]}">
                 Mongod (<b>{{mongo.observed_execution_state}}</b>) on <code>{{ mongo.slave.hostname
                 }}:{{mongo.slave_port}}</code> -
                 <a href="/#/slaves/{{mongo.slave.id}}"><b ng-if="!problemsBySlave[mongo.slave.id]"><span
