--- a/gui/pages/slaves.html
+++ b/gui/pages/slaves.html
@@ -53,7 +53,7 @@
         </div>
     </div>
 
-    <div class="panel panel-info">
+    <div class="panel panel-warning">
         <div class="panel-heading">
             <h3 data-toggle="collapse" data-target="#slaves-disabled" aria-expanded="true"
                 class="panel-title mouse-link mamid-collapse">Disabled <span class="caret rotatecaret"></span></h3>
