--- a/gui/pages/home.html
+++ b/gui/pages/home.html
@@ -2,7 +2,7 @@
 <h2 class="sub-header">Recent problems</h2>
 <div ng-if="problems.length == 0" class="jumbotron">
     <div class="row">
-        <div class="col-lg-1"><h1 style="text-align: center; transform: translateY(25%);"><span
+        <div class="col-lg-1"><h1 style="text-align: center; transform: translateY(30%);"><span
                 class="glyphicon glyphicon-thumbs-up"></span></h1>
         </div>
         <div class="col-lg-11">
@@ -10,7 +10,7 @@
                 <div class="col-lg-12"><h1>Everything is fine.</h1></div>
             </div>
             <div class="row">
-                <div class="col-lg-11"><p>There are currently no known problems.</p></div>
+                <div class="col-lg-11"><p>&nbsp;There are currently no known problems.</p></div>
             </div>
         </div>
     </div>
