FIX: GUI: typos

--- a/gui/pages/replicaset.html
+++ b/gui/pages/replicaset.html
@@ -168,7 +168,7 @@
             <div class="modal-body">
                 You are about to remove the replica set <code>{{ replicaset.name }}</code>. By doing so, all the data of
                 this
-                replica set will be unrecoverably removed.
+                replica set will be irrecoverably removed.
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-danger" ng-click="deleteReplicaSet()">Remove Replica Set
