--- a/gui/pages/riskgroups.html
+++ b/gui/pages/riskgroups.html
@@ -1,6 +1,6 @@
 <h1 class="page-header">Risk Groups</h1>
 <p>Assign your Slaves to groups which share a common risk of failure, e.g. a shared power supply.</p>
-<p>MAMID spreads Replica Set members over Slaves in different Risk Groups to minimize downtime &amp; maximize availibility.</p>
+<p>MAMID spreads Replica Set members over Slaves in different Risk Groups to minimize downtime &amp; maximize availability.</p>
 <p>Slaves not assigned to a Risk Group will be used for Replica Sets regardless of their physical interdependencies with remaining Replica Set members.</p>
 <form ng-submit="createRiskGroup()">
     <div class="panel panel-default">
