FIX: GUI: typo #62

--- a/gui/pages/replicaset.html
+++ b/gui/pages/replicaset.html
@@ -111,10 +111,10 @@
                         </div>
                         <ul style="margin-top: 10px; list-style-type: none; padding-left: 0pt; line-height: 1.5em "
                             class="clearfix">
-                            <li><b>Config</b>: Mongod is started with the <a target="_blank"
+                            <li><b>Config</b>: Mongod is started with <a target="_blank"
                                                                              href="https://docs.mongodb.com/manual/reference/program/mongod/#cmdoption--shardsvr"><code>--configsvr</code></a>
                             </li>
-                            <li><b>Shard</b>: Mongod is started with the <a target="_blank"
+                            <li><b>Shard</b>: Mongod is started with <a target="_blank"
                                                                             href="https://docs.mongodb.com/manual/reference/program/mongod/#cmdoption--shardsvr"><code>--shardsvr</code></a>
                             </li>
                             <li><b>None</b>: Mongod is started without CLI flags regarding Sharding</li>
