FIX: GUI: make risk group create button work

--- a/gui/pages/riskgroups.html
+++ b/gui/pages/riskgroups.html
@@ -14,7 +14,7 @@
                         <input type="text" ng-model="new_riskgroup.name" placeholder="New Risk Group Name"
                                class="form-control">
                         <span class="input-group-btn"><button class="btn btn-success"
-                                                              type="button">Create</button></span>
+                                                              type="submit">Create</button></span>
                     </div><!-- /input-group -->
                 </div>
             </div>
