ADD: GUI: rudimentary 'About' Page

--- a/gui/index.html
+++ b/gui/index.html
@@ -89,6 +89,8 @@
             <ul class="nav nav-sidebar">
                 <li ng-class="{'active': $location.path()=='/system'}"><a href="/#system"><span
                         class="glyphicon glyphicon-cog" aria-hidden="true"></span> System</a></li>
+                <li ng-class="{'active': $location.path()=='/about'}"><a href="/#about"><span
+                        class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> About</a></li>
             </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
