ADD: licence: credits

--- a/gui/pages/about.html
+++ b/gui/pages/about.html
@@ -1,6 +1,6 @@
 <h1 class="page-header">About <i>MAMID</i></h1>
 
-<p><i>MAMID</i> is licensed under the MIT license.</p>
+<p><i>MAMID</i> is licensed under the MIT License.</p>
 <div class="well well-lg">
     MIT License<br/><br/>
 
@@ -23,4 +23,61 @@
     LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
     OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
     SOFTWARE.
+</div>
+<h2 class="sub-header">Credits</h2>
+<div class="row text-center">
+    <div class="col-md-6 well">Powered by PostgreSQL</div>
+    <div class="col-md-6 well">Backend written in <b>Go</b></div>
+</div>
+<div class="row text-center">
+    <div class="col-md-3 well">
+        UI built with <a href="https://angularjs.org" target="_blank">AngularJS</a>
+    </div>
+    <div class="col-md-3 well">
+        UI built with <a href="https://getbootstrap.com" target="_blank">Bootstrap</a>
+    </div>
+    <div class="col-md-3 well">
+        <a target="_blank" href="https://github.com/qor/inflection">qor inflection</a>
+    </div>
+    <div class="col-md-3 well">
+        <a target="_blank" href="https://github.com/jinzhu/inflection">jinzhu inflection</a>
+    </div>
+</div>
+<div class="row text-center">
+    <div class="col-md-6 well"><a href="https://github.com/lib/pq" target="_blank">pq driver</a></div>
+    <div class="col-md-3 well"><a href="https://github.com/go-mgo/mgo" target="_blank">go-mgo</a>
+    </div>
+    <div class="col-md-3 well">
+        <a href="https://github.com/Masterminds/semver" target="_blank">semver</a>
+    </div>
+</div>
+<div class="row text-center">
+    <div class="col-md-3"></div>
+    <div class="col-md-3"></div>
+    <div class="col-md-3 well">
+        <a target="_blank" href="https://github.com/gorilla/context">gorilla context</a>
+    </div>
+    <div class="col-md-3 well">
+        <a href="https://github.com/jinzhu" target="_blank">gorm</a>
+    </div>
+</div>
+<div class="row text-center">
+    <div class="col-md-3"></div>
+    <div class="col-md-3"></div>
+    <div class="col-md-3 well">
+        <a target="_blank" href="https://github.com/gorilla/mux">gorilla mux</a>
+    </div>
+    <div class="col-md-3 well">
+        <a href="https://github.com/Sirupsen/logrus" target="_blank">logrus</a>
+    </div>
+</div>
+<div class="row text-center">
+    <div class="col-md-3"></div>
+    <div class="col-md-3"></div>
+    <div class="col-md-3 well">
+        <a href="https://github.com/stretchr/testify" target="_blank">testify</a>
+    </div>
+    <div class="col-md-3 well">
+        <a href="https://github.com/vaughan0/go-ini" target="_blank">go-ini</a>
+    </div>
 </div>
