FIX: license: correct link for gorm

--- a/gui/pages/about.html
+++ b/gui/pages/about.html
@@ -58,7 +58,7 @@
         <a target="_blank" href="https://github.com/gorilla/context">gorilla context</a>
     </div>
     <div class="col-md-3 well">
-        <a href="https://github.com/jinzhu" target="_blank">gorm</a>
+        <a href="https://github.com/jinzhu/grom" target="_blank">gorm</a>
     </div>
 </div>
 <div class="row text-center">
