FIX: gui: better visibility of state descriptions

--- a/gui/pages/slave.html
+++ b/gui/pages/slave.html
@@ -137,14 +137,14 @@
         </div>
         <div class="row" style="margin-top: 15px;">
             <div class="col-lg-4">
-                <label class="visible-md">Active</label>
+                <label class="visible-md visible-xs">Active</label>
                 <ul>
                     <li>Slave is eligible to host Mongods</li>
                     <li>Attributes are immutable</li>
                 </ul>
             </div>
             <div class="col-lg-4">
-                <label class="visible-md">Maintenance mode</label>
+                <label class="visible-md visible-xs">Maintenance mode</label>
                 <ul>
                     <li>No new Mongods will be spawned on this Slave.</li>
                     <li>Existing Mongods will be left untouched.</li>
@@ -153,7 +153,7 @@
                 </ul>
             </div>
             <div class="col-lg-4">
-                <label class="visible-md">Disabled</label>
+                <label class="visible-md visible-xs">Disabled</label>
                 <ul>
                     <li>MAMID attempts to migrate Mongods to eligible Slaves.<br/>If there are no eligible slaves, the
                         Mongds stay active on the disabled Slave.
